--- a/earning.css
+++ b/earning.css
@@ -80,3 +80,97 @@ td {
     width: 80px;
     height: 45px;
 }
+
+
+
+
+
+
+
+
+h2 {
+    text-align: center;
+    /* Centers the text horizontally */
+    margin-bottom: 20px;
+    /* Adds a bottom margin */
+}
+
+/* Modal Styles */
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scrolling if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 50px;
+    border: 1px solid #888;
+    width: 45%;
+    border-radius: 20px;
+    /* Could be more or less, depending on screen size */
+}
+
+.close {
+    color: #9c2121;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+form label {
+    margin-bottom: 2px;
+}
+
+form input,
+form textarea {
+    margin-bottom: 12px;
+    padding: 8px;
+    font-size: 16px;
+    height: 45px;
+    border-radius: 3px;
+}
+
+form button {
+    padding: 16px;
+    width: 110px;
+    background-color: #4caf50;
+    color: white;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    margin-left: 45%;
+
+}
+
+form button:hover {
+    background-color: #45a049;
+}
