--- a/profile.css
+++ b/profile.css
@@ -110,6 +110,8 @@ button {
     border: solid 2px black;
     padding: 0.375em 1.125em;
     font-size: 1rem;
+    margin-right: 9px;
+
 }
 
 .button-arounder {
